--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,7 @@ a, button { -webkit-tap-highlight-color: rgba(0,0,0,.15); }
 /* Navigace – desktop výchozí: viditelná vpravo, jeden řádek */
 .nav {
   display: block;
+  font-weight: 600;
 }
 
 .nav-list {
@@ -314,9 +315,10 @@ ul {
   opacity: 1;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  flex-wrap: nowrap;
+  /* padding-top: 15px;
+  padding-bottom: 15px; */
+  padding: 15px;
   width: 100%;
   background-color: var(--brand);
 }
@@ -608,6 +610,7 @@ footer {
     background-color:var(--brand);
     border-bottom:1px solid var(--border);
     z-index:99;
+    height: 100vh;
   }
   .nav.is-open{ display:block; }
 
@@ -1045,7 +1048,7 @@ a, button {
   justify-content:center;
   font-size:20px;
   cursor:pointer;
-  z-index:999;
+  z-index:98;
   transition:bottom .35s cubic-bezier(.4,0,.2,1);
 }
 
@@ -1059,7 +1062,7 @@ a, button {
   position:fixed;
   right:18px;
   bottom:-60px;                    /* výchozí: schované pod spodkem  */
-  z-index:999;
+  z-index:98;
 
   /* Hard reset pro iOS/Safari */
   -webkit-appearance:none;         /* zruší nativní vzhled */
