--- a/css/styles.css
+++ b/css/styles.css
@@ -609,7 +609,7 @@ footer {
     display:none;
     background-color:var(--brand);
     border-bottom:1px solid var(--border);
-    z-index:99;
+    z-index:999 !important;
     height: 100vh;
   }
   .nav.is-open{ display:block; }
@@ -1048,7 +1048,7 @@ a, button {
   justify-content:center;
   font-size:20px;
   cursor:pointer;
-  z-index:98;
+  z-index:998;
   transition:bottom .35s cubic-bezier(.4,0,.2,1);
 }
 
@@ -1062,7 +1062,7 @@ a, button {
   position:fixed;
   right:18px;
   bottom:-60px;                    /* výchozí: schované pod spodkem  */
-  z-index:98;
+  z-index:998;
 
   /* Hard reset pro iOS/Safari */
   -webkit-appearance:none;         /* zruší nativní vzhled */
