--- a/css/styles.css
+++ b/css/styles.css
@@ -614,7 +614,15 @@ footer {
   }
   .nav.is-open{ display:block; }
 
-  .nav-list{ display:block; padding:8px; }
+  .nav-list{
+     display:flex; 
+     padding:8px;
+    flex-direction: column;
+    text-align: center;
+    height: 75vh;
+    font-size: 1.6rem;
+    justify-content: center;
+    }
   .nav-item a{
     display:block;
     padding:12px;
@@ -1048,7 +1056,7 @@ a, button {
   justify-content:center;
   font-size:20px;
   cursor:pointer;
-  z-index:998;
+  z-index:99;
   transition:bottom .35s cubic-bezier(.4,0,.2,1);
 }
 
@@ -1062,7 +1070,7 @@ a, button {
   position:fixed;
   right:18px;
   bottom:-60px;                    /* výchozí: schované pod spodkem  */
-  z-index:998;
+  z-index:99;
 
   /* Hard reset pro iOS/Safari */
   -webkit-appearance:none;         /* zruší nativní vzhled */
