--- a/css/styles.css
+++ b/css/styles.css
@@ -275,9 +275,9 @@ a, button { -webkit-tap-highlight-color: rgba(0,0,0,.15); }
   margin-left: 10px;
 }
 
-ul {
+.grid ul {
   padding-left: 24px !important;
-}
+} 
 
 
 /* KPI / Chips + CTA */
@@ -613,6 +613,7 @@ footer {
     height: 100vh;
   }
   .nav.is-open{ display:block; }
+
 
   .nav-list{
      display:flex; 
